# onfabric-demo

./: .env.example  .gitignore  EXPECTED_BEHAVIOR_GUIDE.md  README.md  TASK_13_SUMMARY.md  TESTING_INSTRUCTIONS.md  TEST_CHECKLIST.md  UI_GENERATOR_STATUS.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_e2e_json_dashboard.py  test_real_llm_theme.py  test_theme_flow.py  ui_components.json  verify_api_setup.py
backend/: requirements.txt  test_pipeline_websocket.py  test_websocket.py
backend/app/: main.py  test_data.py
backend/app/services/: __init__.py  pipeline_service.py  test_pipeline_service.py
backend/scripts/: generate_demo_dashboards.py
docs/: DEMO_IMPLEMENTATION_GUIDE.md  DEVICE_CODE_FLOW_SUMMARY.md  LINEAR_SYNC_ANALYSIS.md  LINEAR_UPDATE_GUIDE.md  LOADING_OVERLAY_POLISH_SUMMARY.md  ONFABRIC_SUPPORT_REQUEST.md  README.md  ROADMAP.md  UI_GENERATOR_SPEC.md  UI_INTEGRATION_TICKETS.md  oauth_setup_todo.md
docs/plans/: 2025-10-22-api-enrichment-v2.md  2025-10-22-api-enrichment.md  2025-10-22-oauth-mvp.md  2025-10-28-loading-state-blueprint-assembly-design.md  2025-10-29-funky-aesthetics-and-deduplication-design.md  2025-10-30-generative-dashboard-reveal-design.md  2025-10-30-onfabric-api-client-design.md  2025-10-30-onfabric-api-client.md  2025-10-31-demo-persona-implementation.md  2025-10-31-demo-persona-mock-data-design.md  2025-10-31-demo2-fashion-producer-design.md  2025-10-31-github-preparation-design.md  2025-10-31-github-preparation-implementation.md  2025-11-03-loading-state-systems-diagram-design.md  2025-11-03-loading-state-systems-diagram-implementation.md  INTERACTIVE_DEMO_MVP.md  REACT_WEBAPP_PLAN.md
fabric_dashboard/: __init__.py  cli.py
fabric_dashboard/api/: __init__.py  base.py  events.py  geocoding.py  onfabric_client.py  videos.py  weather.py
fabric_dashboard/commands/: __init__.py  auth.py  generate.py  init.py  test_ui.py
fabric_dashboard/core/: __init__.py  config.py  content_writer.py  dashboard_builder.py  data_fetcher.py  pattern_detector.py  search_enricher.py  theme_generator.py  ui_generator.py
fabric_dashboard/mcp/: client.py  oauth_config.py  oauth_flow.py  oauth_server.py  onfabric.py  token_storage.py
fabric_dashboard/models/: schemas.py  ui_components.py
fabric_dashboard/tests/: __init__.py  conftest.py  test_auth_command.py  test_content_writer.py  test_dashboard_builder.py  test_data_fetcher.py  test_demo_fixture.py  test_mcp_client_oauth.py  test_oauth_config.py  test_oauth_flow.py  test_oauth_server.py  test_onfabric_client.py  test_pattern_detector.py  test_schemas.py  test_search_enricher.py  test_theme_generator.py  test_token_storage.py  test_ui_components.py  test_ui_generator.py  test_utils.py
fabric_dashboard/tests/fixtures/: mock_google_data.json  (+3 more)
fabric_dashboard/utils/: __init__.py  cache.py  config.py  files.py  logger.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
manual_tests/: test_content_api.py  test_dashboard_api.py  test_real_api.py  test_search_api.py  test_theme_api.py
plans/: old_plan.md  plan.md
plans/wiget plans/: WIDGET_LAYER_SUMMARY.md  widget_data_schemas.md  widget_implementation_roadmap.md  widget_layer_design.md  widget_visual_examples.md
(+33 files in other folders)
